fix techstack icon spacing, adjust wrapper sizes to prevent viewport difference visual bugs

--- a/styles.css
+++ b/styles.css
@@ -726,7 +726,7 @@ h3 {
 
 .tech-stack i,
 .icon {
-  width: 2vh;
+  width: 1vh;
   margin-right: 10px;
 }
 
